--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,9 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "morgan": "^1.9.1",
-    "nodemon": "^1.19.0"
+    "nodemon": "^1.19.0",
+    "sequelize": "^5.8.5",
+    "sqlite3": "^3.1.8"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
